Display de ilustrações ok

--- a/style.css
+++ b/style.css
@@ -55,9 +55,10 @@ h1 {
 
 a {
     cursor: pointer;
+    text-decoration: underline;
     width: fit-content;
     font-size: 150%;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 a:hover {
@@ -66,9 +67,9 @@ a:hover {
 
 button {
     cursor: pointer;
+    text-decoration: underline;
     background: none;
     border: none;
-    text-decoration: underline;
     text-align:right;
     font-size: 150%;
 }
@@ -149,7 +150,20 @@ button:hover {
 }
 
 .close {
-    cursor: pointer;
+    margin-bottom: 10px;
+    padding: 0 10px 4px 10px;
+    font-weight: normal;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
+}
+.close:hover {
+    background-color: rgba(0, 0, 0, 0.188);
+    -webkit-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
 }
 
 .modal {
@@ -157,9 +171,7 @@ button:hover {
     flex-direction: column;
     align-content: center;
     justify-content: center;
-    background-color: white;
     border-radius: 5px;
-    width: 50%;
     height: fit-content;
     padding: 5px 10px 20px 20px;    
 }
@@ -170,8 +182,52 @@ button:hover {
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.6);
+    height: 100svh;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.imgArrow {
+    font-weight: normal;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 8px 10px 14px;
+    border-radius: 100px;
+    height: 30px;
+    width: 30px;
+    text-decoration: none;
+    font-size: 50px;
+}
+.imgArrow:hover {
+    background-color: rgba(0, 0, 0, 0.188);
+    -webkit-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
+}
+#left {
+    padding: 0 8px 10px 7px;
+}
+
+#drawings {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+#drawingBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 500px;
+    max-width: 80vw;
+    max-height: 80svh;
+}
+#drawingView {
+    border-radius: 10px;
+    width: 100%;
+    height: auto;
 }
 
 
@@ -204,5 +260,17 @@ button:hover {
         left: 25px;
         bottom: 25px;
         right: 25px;
+    }
+    #drawingBox {
+        max-width: 80vw;
+    }
+    #drawings{
+        gap: 0;
+    }
+    .close {
+        margin: 0;
+    }
+    .imgArrow {
+        margin: 0;
     }
 }
