--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ button:hover {
 .stamp {
     font-size: 150%;
     font-family: HippyStamp;
-    margin-bottom: 10px;
+    margin: 10px 0;
 }
 
 .navegation {
