--- a/style.css
+++ b/style.css
@@ -23,6 +23,16 @@
     src: url(assets/Cocaine.ttf);
 }
 
+#loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100svh;
+    background-color: black;
+}
+
 * {
     color: black;
     font-family: Type;
@@ -33,7 +43,7 @@
 
 body {
     overflow: hidden;
-    background-image: url(assets/3.jpg);
+    background-image: url(assets/background.jpg);
     background-color: rgba(245, 245, 245, 0.456);
     background-blend-mode: lighten;
     display: flex;
