--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ button:hover {
 
 
 .close {
+    margin-left: 100%;
     background-color: rgba(0, 0, 0, 0.188);
     -webkit-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.75);
