--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ button:hover {
     border-radius: 5px;
     height: fit-content;
     max-width: 40%;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 25px 25px 25px;
     gap: 5px;
     background-color: white;
 }
@@ -280,8 +280,8 @@ button:hover {
 
 .projectImg {
     outline: 1px solid black;
-    max-width: 100%;
-    height: 40vh;
+    width: 100%;
+    height: auto;
 }
 
 .video {    
